# http-server

./: Cargo.toml  readme.md
http-server-app/: Cargo.toml
http-server-app/src/: app.rs  error.rs  ext.rs  main.rs
http-server-lib/: Cargo.toml
http-server-lib/src/: error.rs  headers.rs  http.rs  lib.rs  server.rs  session.rs
http-server-lib/src/api/: echo.rs  login.rs  logout.rs  mod.rs  verify_login.rs
http-server-lib/src/types/: charset.rs  content_type.rs  cookie.rs  mod.rs
public/: error.html  index.html  main.js
public/api-test/: index.html  main.js
public/game/: index.html  main.js  style.css
public/login/: index.html  main.js
public/logout/: index.html
